# kojnhk

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/v1/: admin.py  attachments.py  auth.py  canvas.py  chat.py  developer.py  health.py  memory.py  models.py  notifications.py  password_reset.py  providers.py  research.py  search.py  security.py  summarize.py  system_prompts.py  web.py
apps/api/app/cache/: redis.py
apps/api/app/core/: config.py  crypto.py  logging.py  middleware.py  security.py
apps/api/app/db/: mongo.py
apps/api/app/models/: __init__.py  auth.py  chat.py  extras.py  models.py
apps/api/app/providers/: __init__.py  anthropic_provider.py  base.py  groq.py  openai_provider.py  stubs.py
apps/api/app/services/: audit.py  prompt_guard.py
apps/api/tests/: test_security_core.py
apps/api/tests/integration/: conftest.py  test_auth_flow.py  test_authorization.py
apps/api/tests/unit/: conftest.py  test_middleware.py  test_prompt_guard.py  test_security.py
apps/web/: next.config.mjs  package.json  tailwind.config.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/src/components/: providers.tsx
docs/: architecture.md  security.md
infra/docker/: Dockerfile.api  Dockerfile.web  docker-compose.yml
infra/docker/nginx/: nginx.conf
scripts/: seed.py
(+61 files in other folders)
