[project]
name = "wormgpt-api"
version = "0.1.0"
description = "WormGPT FastAPI backend"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "motor>=3.5.0",
  "redis>=5.0.0",
  "PyJWT>=2.8.0",
  "bcrypt>=4.0.0",
  "cryptography>=42.0.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "groq>=0.9.0",
  "openai>=1.40.0",
  "anthropic>=0.30.0",
  "google-generativeai>=0.7.0",
  "tenacity>=8.3.0",
  "structlog>=24.1.0",
  "email-validator>=2.1.0",
  "sse-starlette>=2.1.0",
  "beautifulsoup4>=4.12.0",
  "bleach>=6.1.0",
  "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "mypy>=1.10.0",
  "ruff>=0.5.0",
  "freezegun>=1.5.0",
]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004", "E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestUnknownMarkWarning"]
